# ubiquitousplatform

./: .gitignore  LICENSE  ubiquitous.sln
BenchmarkWasmRuntimes/: BenchmarkWasmRuntimes.csproj  Extism.cs  Program.cs  WasmtimeDotNet.cs
ExtismPlayground/: ExtismPlayground.csproj  Program.cs  count_vowels_js.wasm  javy-example.wasm  plugin.wasm
Wasmtime/: Input.cs  Program.cs  WasmtimeExamples.csproj  javy-example.wasm  wasi-data-sharing.wasm
docs/: ARCHITECTURE.md  FRAMEWORK-COMPARISON.md  GETTING-STARTED.md  LIBRA-MEDIA-APP.md  MODULE-CLI.md  MODULE-DEPLOYMENT.md  MODULE-EXECUTION-ENGINE.md  MODULE-MANIFEST.md  MODULE-OBSERVABILITY.md  MODULE-PLUGINS.md  MODULE-SDK.md  MODULE-SERVICES.md  MODULE-TEST-HARNESS.md  PITCH.md  PROJECT-PLAN.md  QUESTIONS.md  README.md  RUNTIME-LANGUAGE-DECISION.md  SECURITY-MODEL.md
host-functions-api/: .gitignore  README.md
rust/ubiquitous-functions/: Cargo.toml  main.rs
src/: ubiquitous.sln
test-harness/: .gitignore  README.md  build-test-and-deploy.sh  copy-to-ubiquitous.functions.tests.unit.sh  esbuild.js  globalsa.d.ts  package-lock.json  package.json  test-all.sh  tsconfig.json
ubiquitous/: Program.cs  (+2 more)
ubiquitous.config/: Class1.cs
ubiquitous.database/: Class1.cs  ubiquitous.data.csproj
ubiquitous.ephemeral/: Class1.cs
ubiquitous.events/: Class1.cs
ubiquitous.functions/: Class1.cs  FunctionConfig.cs  FunctionPool.cs  ubiquitous.functions.csproj
ubiquitous.notifications/: Class1.cs
ubiquitous.storage/: Class1.cs  FilesystemStorage.cs  Metadata.cs  ubiquitous.files.csproj
ubiquitous.unit.tests/: UnitTest1.cs
(+130 files in other folders)
