[package]
name = "ubiquitous-functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
extism = "1.0.0"
anyhow = "1.0.79"
serde = { version = "1.0.190", features = ["derive"] }
tracing-subscriber = "0.3.18"

[[bin]]
name = "ubiquitous-functions"
path = "main.rs"
